--- a/pom.xml
+++ b/pom.xml
@@ -191,6 +191,14 @@
 			<artifactId>reactor-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+		
+		<dependency>
+                <groupId>com.datastax.oss</groupId>
+                <artifactId>java-driver-core</artifactId>
+                <version>4.13.0</version>
+                </dependency>
+		
+		
 
 	</dependencies>
 
